--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -59,9 +59,7 @@
 
 
 
-
-
-<h1 align="center">Items{{display}}</h1>
+<h1 align="center">Items</h1>
 <h3 align="right"><button class="btn btn-basic" (click)="clean()" onclick="document.getElementById('add').style.display='block'"><i class="fa fa-plus"></i></button></h3>
 
 
@@ -79,8 +77,9 @@
 
         </thead>
         <tbody>
-            <tr *ngFor='let item of items'>
-                <td><img [src]="'data:image/PNG;base64,'+ item.picture.split(' ').join('') | safeHtml" width="100" height="100"></td>
+            <tr *ngFor="let item of items.data">
+                <!--<td><img [src]="'data:image/PNG;base64,'+ item.picture.split(' ').join('') | safeHtml" width="100" height="100"></td>-->
+                <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
                 <td>{{item.itemQuantityStored}}</td>
@@ -288,3 +287,6 @@ class="close" title="Close Modal">&times;</span>
 </script>
 -->
      
+
+
+
