--- a/src/client/app/dashboard/order/order.component.html
+++ b/src/client/app/dashboard/order/order.component.html
@@ -22,15 +22,20 @@
             <td>{{order.customerID}}</td>
             <td>{{order.orderDate}}</td>
             <td>{{order.orderTotal}}</td>
-            <td>{{order.orderStatus}}</td>
-            <td>{{order.orderRemarks}}</td>
-            <td>{{order.Location}}</td>
-            <td>{{order.orderTime}}</td>
             <td>
-                <button class="btn btn-info" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('edit').style.display='block'"><i class="fa fa-pencil"></i></button>
-     
-     <button class="btn btn-danger" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('del').style.display='block'"><i class="fa fa-remove"></i></button>
-    </td>	 
+                <select #stat [(ngModel)]="order.orderStatus" (change)="onChange(stat,$event,order.orderID,order.customerID,order.orderDate,order.orderTotal,order.orderStatus,order.orderRemarks,order.orderTime,order.packaging,order.location)">
+                    <option  value="canceled">canceled</option>
+                    <option value="pending">pending</option>
+                    <option value="verified">verified</option>
+                    <option value="delivered">delivered</option>        
+                </select>
+            </td>
+            <td>{{order.orderRemarks}}</td>
+            <td>{{order.orderTime}}</td>
+            <td>{{order.packaging}}</td>
+            <td>{{order.location}}</td>
+            
+           
           
         </tr>
             
