--- a/src/client/app/dashboard/customer/customer.component.html
+++ b/src/client/app/dashboard/customer/customer.component.html
@@ -19,7 +19,8 @@
     background-color: #fefefe;
     margin: 5px auto; /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 40%; /* Could be more or less, depending on screen size */
+    
 }
 
 /* The Close Button */
@@ -28,8 +29,8 @@
     position: absolute;
     right: 25px;
     top: 0; 
-    color: #000;
-    font-size: 35px;
+    color: red;
+    font-size: 50px;
     font-weight: bold;
 }
 
@@ -57,168 +58,140 @@
 }
     </style>
 
-<!--
- <form f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
-      <input name="first" ngModel required first="ngModel">
-      <input name="last" ngModel>
-      <button>Submit</button>
-    </form>-->
-
-
-
 <h1 align="center">Customers</h1>
-<h3 align="right" *ngIf="addCustomer"><button class="btn btn-basic" (click)="clear()" onclick="document.getElementById('add').style.display='block'"><i class="fa fa-plus"></i></button></h3>
+<h3 align="right" *ngIf="addCustomer">
+        <button class="btn btn-basic" (click)="clear()" onclick="document.getElementById('add').style.display='block'">
+                <i class="fa fa-plus"></i>
+        </button>
+</h3>
 <div class="table">
-
     <table class="table">
-		
         <thead>
              <th>CustomerID</th>
-            <th>Last Name</th>
-        <th>First Name</th>
-        <th>Middle Name</th>
-        <th>Number</th>
-		<th>Address</th>
-        <th>Verification Code</th>
-		<th>Options</th>
-		
+             <th>Last Name</th>
+             <th>First Name</th>
+             <th>Middle Name</th>
+             <th>Number</th>
+             <th>Address</th>
+             <th>Verification Code</th>
+             <th>Options</th>
         </thead>
         <tbody>
-        <tr *ngFor='let customer of customers'>
-            <td>{{customer.customerID}}</td>
-            <td>{{customer.cusLastName}}</td>
-            <td>{{customer.cusFirstName}}</td>
-            <td>{{customer.cusMiddleName}}</td>
-            <td>{{customer.number}}</td>
-            <td>{{customer.address}}</td>
-            <td>{{customer.verificationCode}}</td>
-            <td>
-                <button *ngIf="editCustomer" class="btn btn-info" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('edit').style.display='block'"><i class="fa fa-pencil"></i></button>
-     
-     <button *ngIf="delCustomer" class="btn btn-danger" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('del').style.display='block'"><i class="fa fa-remove"></i></button>
-    </td>
-        </tr>
-        
+            <tr *ngFor='let customer of customers'>
+                <td>{{customer.customerID}}</td>
+                <td>{{customer.cusLastName}}</td>
+                <td>{{customer.cusFirstName}}</td>
+                <td>{{customer.cusMiddleName}}</td>
+                <td>{{customer.number}}</td>
+                <td>{{customer.address}}</td>
+                <td>{{customer.verificationCode}}</td>
+                <td>
+                    <button *ngIf="editCustomer" class="btn btn-info" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('edit').style.display='block'">
+                        <i class="fa fa-pencil"></i>
+                    </button>
+                    <button *ngIf="delCustomer" class="btn btn-danger" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('del').style.display='block'">
+                        <i class="fa fa-remove"></i>
+                    </button>
+                </td>
+            </tr>     
         </tbody>
     </table>
 </div>
 
 <!--delete-->
-<div id="del" class="modal">
-  <span onclick="document.getElementById('del').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
- <form role="form" id="datadel" class="modal-content animate" >
- <div class="container" align="center">
-  <!-- Modal Content --><br><br><br><br>
-    <h3 align="center">Are you sure you want<br> to delete this Customer?</h3><br>
-    <h4 align="center">Customer ID:{{customerID}}</h4>
-    <h4 align="center">Name:{{cusLastName}}, {{cusFirstName}} {{cusMiddleName}}</h4>
-    <br><br>
-    <button class="btn btn-success" (click) ='onSubmitDel($event, user.value)'><i class="fa fa-check"></i></button>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'"><i class="fa fa-remove"></i></button>
-    <br><br><br><br>
-</div>
-</form>
+<div *ngIf="modal" id="del" class="modal">
+    <span onclick="document.getElementById('del').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <form role="form" id="datadel" class="modal-content animate">
+            <div class="container" align="center">
+                <!-- Modal Content --><br><br><br><br>
+                    <h3 align="center">Are you sure you want<br> to delete this Customer?</h3><br>
+                    <h4 align="center">Customer ID: {{customerID}}</h4>
+                    <h4 align="center">Name: {{cusLastName}}, {{cusFirstName}} {{cusMiddleName}}</h4><br><br>            
+                    <button class="btn btn-success" (click) ='onSubmitDel()'>
+                        <i class="fa fa-check"></i>
+                    </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                       
+                    <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'">
+                        <i class="fa fa-remove"></i>
+                    </button><br><br><br><br>
+            </div>
+        </form>
 </div>
 
 
 
 <!--edit-->
 <!-- The Modal -->
-<div id="edit" class="modal">
-  <span onclick="document.getElementById('edit').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
-
-  <!-- Modal Content -->
-  <form [formGroup]="complexForm" role="form" id="dataedit" class="modal-content animate" >
-				<div class="form-content">
-      <div class="container" align="center">
-      <br><br><br>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Name</b></label>
-            <input type="text" [formControl]="complexForm.controls['firstName']" [(ngModel)]="cusFirstName" [value]="cusFirstName" name="cusFirstName" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Middle Name</b></label>
-            <input type="text" [formControl]="complexForm.controls['middleName']" [value]="cusMiddleName"  [(ngModel)]="cusMiddleName" name="cusMiddleName" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last Name</b></label>
-            <input type="text" [formControl]="complexForm.controls['lastName']" [value]="cusLastName"  [(ngModel)]="cusLastName" name="cusLastName" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number</b></label>
-            <input type="text" [formControl]="complexForm.controls['number']" [value]="number"  [(ngModel)]="number" name="number" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address</b></label>
-            <input type="text" [formControl]="complexForm.controls['address']" [value]="address" [(ngModel)]="address" name="address" required >
-            <br><br>
-      </div>
-       <div class="form-group"> 
-             <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
-        </div>
-        </div>
-    
-    </div>
-     </form>
+<div *ngIf="modal" id="edit" class="modal">
+    <span onclick="document.getElementById('edit').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <!-- Modal Content -->
+        <form [formGroup]="complexForm" role="form" id="dataedit" class="modal-content animate" >
+	        <div class="form-content">
+                <div class="container" align="center"><br><br>
+                    <div align="left" class="form-group">
+                        <label><b>First Name</b></label>
+                        <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['firstName']" [(ngModel)]="cusFirstName" [value]="cusFirstName" name="cusFirstName" required >
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Middle Name</b></label>
+                            <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['middleName']" [value]="cusMiddleName"  [(ngModel)]="cusMiddleName" name="cusMiddleName" required > 
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Last Name</b></label>
+                            <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['lastName']" [value]="cusLastName"  [(ngModel)]="cusLastName" name="cusLastName" required >
+                            
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Number</b></label>
+                            <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['number']" [value]="number"  [(ngModel)]="number" name="number" required >
+                            
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Address</b></label>
+                            <input type="text" class="form-control input-underline input-lg" [formControl]="complexForm.controls['address']" [value]="address" [(ngModel)]="address" name="address" required >
+                            
+                    </div>
+                    <div align="center" class="form-group"> 
+                        <br>
+                            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit()'>Save</button>    
+                            <br>
+                    </div>
+                </div>
+            </div>
+        </form>
 </div>
 
-
-
-
-
-
 <!--add-->
-<!--FINISH PASSING ID TO MODAL-->
 <!-- The Modal -->
-<div id="add" class="modal">
-  <span onclick="document.getElementById('add').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
-
-  <!-- Modal Content  (ngSubmit)="onSubmitadd(user.value)" -->
-  <form [formGroup]="complexForm" role="form" id="dataadd" class="modal-content animate" >
-				<div class="form-content">
-      <div class="container" align="center">
-      <br><br><br>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Name</b></label>
-            <input type="text"  [formControl]="complexForm.controls['firstName']"  placeholder="Enter First Name"   [(ngModel)]="cusFirstName" name="cusFirstName" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Middle Name</b></label>
-            <input type="text"  [formControl]="complexForm.controls['middleName']" placeholder="Enter Middle Name"  [(ngModel)]="cusMiddleName" name="cusMiddleName" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last Name</b></label>
-            <input type="text"  [formControl]="complexForm.controls['lastName']" placeholder="Enter Last Name"  [(ngModel)]="cusLastName" name="cusLastName" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number</b></label>
-            <input type="text"  [formControl]="complexForm.controls['number']" placeholder="Enter Phone Number"  [(ngModel)]="number" name="number" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address</b></label>
-            <input type="text"  [formControl]="complexForm.controls['address']" placeholder="Enter Address" [(ngModel)]="address" name="address" required >
-            <br><br>
-      </div>
-       <div class="form-group"> 
-            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitAdd($event, user.value)'>Register</button>
-           
-        </div>
-        </div>
-   </div>
-   </form>
+<div *ngIf="modal" id="add" class="modal">
+    <span onclick="document.getElementById('add').style.display='none'"class="close" title="Close Modal">&times;</span>
+        <!-- Modal Content" -->
+        <form [formGroup]="complexForm" role="form" id="dataadd" class="modal-content animate" >
+	        <div class="form-content">
+                <div class="container" align="center"><br><br> 
+                    <div align="left" class="form-group">
+                            <label><b>First Name</b></label>
+                            <input type="text" class="form-control input-underline input-lg"  [formControl]="complexForm.controls['firstName']"  placeholder="Enter First Name"   [(ngModel)]="cusFirstName" name="cusFirstName" required >
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Middle Name</b></label>
+                            <input type="text" class="form-control input-underline input-lg"  [formControl]="complexForm.controls['middleName']" placeholder="Enter Middle Name"  [(ngModel)]="cusMiddleName" name="cusMiddleName" required >                    
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Last Name</b></label>
+                            <input type="text" class="form-control input-underline input-lg"  [formControl]="complexForm.controls['lastName']" placeholder="Enter Last Name"  [(ngModel)]="cusLastName" name="cusLastName" required >    
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Number</b></label>
+                            <input type="text" class="form-control input-underline input-lg"  [formControl]="complexForm.controls['number']" placeholder="Enter Phone Number"  [(ngModel)]="number" name="number" required >    
+                    </div>
+                    <div align="left" class="form-group">
+                            <label><b>Address</b></label>
+                            <input type="text" class="form-control input-underline input-lg" class="form-control input-underline input-lg"  [formControl]="complexForm.controls['address']" placeholder="Enter Address" [(ngModel)]="address" name="address" required >             
+                    </div> 
+                    <div align="center" class="form-group"><br>
+                            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitAdd()'>Register</button>                     
+                    </div><br>
+                </div>
+            </div>
+        </form>
 </div>
