--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -57,28 +57,31 @@
 }
     </style>
 
-
-<button class="btn btn-basic" (click)="clean()"><i class="fa fa-pencil"></i></button>
+<!--
+<button class="btn btn-basic" (click)="clean()"><i class="fa fa-pencil"></i></button>-->
 <h1 align="center">Items</h1>
-<h3 align="right"><button class="btn btn-basic" (click)="clean()" onclick="document.getElementById('add').style.display='block'"><i class="fa fa-plus"></i></button></h3>
+<h3 align="right">
+    <button class="btn btn-basic" (click)="clean()" onclick="document.getElementById('add').style.display='block'">
+        <i class="fa fa-plus"></i>
+    </button>
+</h3>
 
 
 
 <div class="table">
     <table class="table">
         <thead>
-        <th>Picture</th>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Quantity Stored</th>
-        <th>Price</th>
-        <th>Purchase Count</th>
-        <th>Options</th>
+            <th>Picture</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Quantity Stored</th>
+            <th>Price</th>
+            <th>Purchase Count</th>
+            <th>Options</th>
 
         </thead>
         <tbody>
             <tr *ngFor="let item of items.data">
-                <!--<td><img [src]="'data:image/PNG;base64,'+ item.picture.split(' ').join('') | safeHtml" width="100" height="100"></td>-->
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
@@ -86,13 +89,14 @@
                 <td>{{item.itemPrice}}</td>
                 <td>{{item.purchaseCount}}</td>
                 <td>
-                    <button class="btn btn-info" (click)="clickedit($event,item.itemID,item.itemName,item.itemQuantityStored,item.itemPrice,item.purchaseCount,item.picture)" onclick="document.getElementById('edit').style.display='block'"><i class="fa fa-pencil"></i></button>
-     
-                    <button class="btn btn-danger" (click)="clickdel($event,item.itemID,item.itemName)" onclick="document.getElementById('del').style.display='block'"><i class="fa fa-remove"></i></button>
+                    <button class="btn btn-info" (click)="clickedit($event,item.itemID,item.itemName,item.itemQuantityStored,item.itemPrice,item.purchaseCount,item.picture)" onclick="document.getElementById('edit').style.display='block'">
+                        <i class="fa fa-pencil"></i>
+                    </button>
+                    <button class="btn btn-danger" (click)="clickdel($event,item.itemID,item.itemName)" onclick="document.getElementById('del').style.display='block'">
+                        <i class="fa fa-remove"></i>
+                    </button>
                 </td>
-            </tr>
-            
-        
+            </tr>   
         </tbody>
     </table>
 </div>
@@ -112,18 +116,18 @@ class="close" title="Close Modal">&times;</span>
       <br><br><br>
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Name</b></label>
-            <input type="text" [formControl]="complexForm.controls['itemName']"  placeholder="Enter Item Name"   [(ngModel)]="itemName" name="itemName" required >
+            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemName']"  placeholder="Enter Item Name"   [(ngModel)]="itemName" name="itemName" required >
             <br><br>
       </div>
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Quantity Stored</b></label>
-            <input type="text" [formControl]="complexForm.controls['itemQuantityStored']" placeholder="Enter Quantity to be Stored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
+            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemQuantityStored']" placeholder="Enter Quantity to be Stored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
             <br><br>
       </div>
 
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Price</b></label>
-            <input type="text" [formControl]="complexForm.controls['itemPrice']" placeholder="Enter Price"  [(ngModel)]="itemPrice" name="itemPrice" required >
+            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemPrice']" placeholder="Enter Price"  [(ngModel)]="itemPrice" name="itemPrice" required >
             <br><br>
       </div>
       <div class="form-group">
@@ -151,11 +155,6 @@ class="close" title="Close Modal">&times;</span>
 				<div class="form-content">
       <div class="container" align="center">
       <br><br><br>
-       <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item ID</b></label>
-            <input type="text"  [value]="itemID" name="itemID" readonly>
-            <br><br>
-      </div>
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Name</b></label>
             <input type="text" [(ngModel)]="itemName" [value]="itemName" name="itemName" readonly>
@@ -163,13 +162,13 @@ class="close" title="Close Modal">&times;</span>
       </div>
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Quantity Stored</b></label>
-            <input type="text" [value]="itemQuantityStored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
+            <input type="text" [formControl]="complexForm.controls['itemQuantityStored']" [value]="itemQuantityStored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
             <br><br>
       </div>
 
       <div class="form-group">
             <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Price</b></label>
-            <input type="text" [value]="itemPrice"  [(ngModel)]="itemPrice" name="itemPrice" required >
+            <input type="text" [formControl]="complexForm.controls['itemPrice']" [value]="itemPrice"  [(ngModel)]="itemPrice" name="itemPrice" required >
             <br><br>
       </div>
 
@@ -179,8 +178,7 @@ class="close" title="Close Modal">&times;</span>
             <br><br>
       </div>
        <div class="form-group"> 
-            <a class="btn rounded-btn" (click) ='onSubmitEdit($event, user.value)'>Save</a>
-     
+            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
         </div>
         </div>
     
