--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -8,15 +8,13 @@
 				<div class="form-content">
 					
 					<div class="form-group">
-						<input type="text" [(ngModel)]='user' name='user' class="form-control input-underline input-lg" placeholder="Username">
+						<input type="text" (keyup.enter)="login($event,login.value)" [(ngModel)]='user' name='user' class="form-control input-underline input-lg" placeholder="Username">
 					</div> 
 					<div class="form-group">
-						<input type="password" [(ngModel)]='pass' name='pass' class="form-control input-underline input-lg" placeholder="Password">
-						
+						<input type="password" (keyup.enter)="login($event,login.value)" [(ngModel)]='pass' name='pass' class="form-control input-underline input-lg" placeholder="Password">						
 					</div>
-				</div>
-				
-				<a class="btn rounded-btn"(click)='changeGV($event)' (click) ='login($event, login.value)'> Log in </a>
+				</div>				
+				<a class="btn rounded-btn" (click) ='login($event, login.value)'> Log in </a>
 			</form><!-- [routerLink]="['dashboard', 'home']"-->
 		</div>	
 	</div>
